css/base.css
/* =============== #Fonts =============== */
@font-face {
  font-family: 'Comfortaa';
  src: 
		url('../fonts/ComfortaaBold.woff2') format('woff2'),
    url('../fonts/ComfortaaBold.woff') format('woff');
  font-display: swap;
  font-style: normal;
  font-weight: 700;
}

@font-face {
  font-family: 'PT Sans Narrow';
  src: 
		url('../fonts/PTSansNarrowRegular.woff2') format('woff2'),
    url('../fonts/PTSansNarrowRegular.woff') format('woff');
  font-display: swap;
  font-style: normal;
  font-weight: 400;
}

@font-face {
  font-family: 'PT Sans Narrow';
  src: 
		url('../fonts/PTSansNarrowBold.woff2') format('woff2'),
    url('../fonts/PTSansNarrowBold.woff2') format('woff');
  font-display: swap;
  font-style: normal;
  font-weight: 700;
}

/* =============== #CSS RESET =============== */

/*
  Josh's Custom CSS Reset
  https://www.joshwcomeau.com/css/custom-css-reset/
*/

*, *::before, *::after {
  box-sizing: border-box;
}

* {
  margin: 0;
}

body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}

img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}

input, button, textarea, select {
  font: inherit;
}

p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
}

p {
  text-wrap: pretty;
}
h1, h2, h3, h4, h5, h6 {
  text-wrap: balance;
}

/* =============== #Variables =============== */
:root {
	--clr-primary: #365314;
  --clr-secondary: #8ABF58;
	--clr-accent: #2e524a;
  --clr-bg: #f7f1ea;
  --clr-bg-accent: #bac9ac;

	font-size: 16px;
	--color-text: #000;
	/* --color-bg: #fff; */
	--color-bg: #f7f1ea;
	--color-link: #000;
	--color-link-hover: #a2a2a2;
	--perspective: 0px;
	--grid-item-translate: 0px;
	--grid-item-ratio: 0.75;
	--grid-item-radius: 7px;
	--grid-gap: 4vw;
	--grid-columns: 3;
	--grid-width: 100%;
	--grid-max-width: 1200px;
	/* --grid-item-ratio: 1; */
	--grid-item-ratio: .75;
	--grid-item-radius: 20px;
	--grid-gap: 1vw;
}

/* =============== #Preflight =============== */
body {
	margin: 0;
	color: var(--color-text);
	background-color: var(--color-bg);
	font-family: "PT Sans Narrow", sans-serif;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	overflow-x: hidden;
}

/* =============== #Common conponents =============== */
.container {
  width: min(1280px, 100% - 2rem);
  margin-inline: auto;
}

.link {
	font-size: 1rem;
  line-height: 1;
  text-decoration: none;
  color: var(--clr-accent);
  transition: color 0.3s ease;
}

.link:hover {
  color: var(--clr-bg);
}

.link.-block {
	display: block;
}

.link.-md {
	font-size: 1.125rem;
}

.link.-lg {
	font-size: 1.5rem;
}

.link.-bold {
  font-weight: 700;
}

.button {
	display: inline-flex;
	gap: 1rem;
	padding-block: 1rem;
	padding-inline: 2rem;
	border-width: 1px;
	border-style: solid;
	border-color: transparent;
	font-size: 1.5rem;
	line-height: 1;
	text-decoration: none;
	transition: all 0.3s ease;
}

.button.-primary {
	background-color: var(--clr-accent);
	color: #fff;
}

.button.-primary:hover {
	background-color: var(--clr-bg);
	border-color: var(--clr-bg);
	color: var(--clr-accent);
}

.button.-lg {
	font-size: 1.125rem;
}

.button.-pill {
	border-radius: 9999px;
}

/* =============== Page Loader =============== */
.loading::before,
.loading::after {
	content: '';
	position: fixed;
	z-index: 4000;
}

.loading::before {
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background: var(--color-bg);
}

.loading::after {
	top: 50%;
	left: 50%;
	width: 160px;
	height: 160px;
	transform: translate(-50%, -50%);
	background-image: url(../img/spinner.svg);
}

/* =============== #HERO =============== */
.hero {
	padding-bottom: 51px;
	background-color: var(--clr-bg-accent);
	background-image: url(../img/bg_effect-2.png);
	background-repeat: no-repeat;
	background-position: 0 100%;
}

.hero-body {
	position: relative;
	display: grid;
	place-content: center;
	gap: 1.5rem;
	min-height: 600px;
}

.hero-contacts {
	position: absolute;
	top: 1.5rem;
	right: 0;
	text-align: right;
}

.hero-logo {
	position: relative;
	z-index: 2;
}

.hero-title {
	
  width: 100%;
	max-width: 100%;
	font-size: 2.5rem;
	font-family: "Comfortaa";
	font-size: 1.875rem;
	line-height: 1;
  font-weight: 700;
  text-align: center;
	letter-spacing: -0.025em;
	color: rgba(255,255,255, 0.5);
}

.hero-title br {
	display: none;
}

@media (min-width: 667px) {
	.hero-title {
		position: absolute;
		z-index: 1;
		top: 50%;
		left: 50%;
		transform: translate(-50%, -50%);
		font-size: clamp(58px, 12vw, 140px);
		color: rgba(255,255,255, 0.12);
	}

	.hero-title br {
		display: block;
	}
}

.hero-links {
	position: relative;
	z-index: 2;
	display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 0.5rem 1.125rem;
}

/* =============== #COLUMNS =============== */
.columns {
	width: var(--grid-width);
	max-width: var(--grid-max-width);
	position: relative;
	padding: 100px 0;
	display: grid;
	place-items: center;
    grid-template-columns: repeat(var(--grid-columns),1fr);
    gap: var(--grid-gap);
}

.column {
	width: 100%;
	position: relative;
	display: grid;
	gap: var(--grid-gap);
	grid-template-columns: 100%;
	will-change: transform;
}

/* =============== Tile component =============== */
.tile {
	margin: 0;
	position: relative;
	z-index: 1;
	
}

.tile-imgwrap {
	width: 100%;
	aspect-ratio: var(--grid-item-ratio);
	height: auto;
	position: relative;
	overflow: hidden;
	border-radius: var(--grid-item-radius);
	box-shadow: 5px 5px 35px 14px rgba(0, 0, 0, 0.17);
}

.tile-img {
	position: absolute;
	top: calc(-1 * var(--grid-item-translate));
	left: calc(-1 * var(--grid-item-translate));
	height: calc(100% + var(--grid-item-translate) * 2);
	width: calc(100% + var(--grid-item-translate) * 2);
	background-size: cover;
	background-position: 50% 20%;
	object-fit: cover;
	object-position: 50% 20%;
	backface-visibility: hidden;
}

/* =============== Contact section =============== */
.contact {
	position: relative;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	gap: 2.5rem;
	width: 100%;
	min-height: 520px;
	padding-block: 52px;
	background-color: var(--clr-bg-accent);
	color: var(--clr-accent);
	background-image: 
		url(../img/bg_effect-1.png),
		url(../img/bg_effect-2.png);
	background-repeat: no-repeat, no-repeat;
	background-position: 0 0, left 0 bottom -1px;
}

.contact-title {
	font-size: 2rem;
	font-weight: 700;
	line-height: 1.2;
	text-align: center;
}

/* =============== Credits section =============== */
.credits {
	width: 100%;
	font-size: 1rem;
	line-height: 1.5;
	text-align: center;
	padding-block: 2rem;
	color: var(--clr-primary);
}

